# supplemental_instruction

./: .gitignore  CMakeLists.txt
Mar10/: Info.md  School.cpp  School.h  Student.cpp  Student.h  main.cpp  schoolProgram.cpp
Mar17/: TOPICS.md
Mar17/copy_constructor/: Student.cpp  Student.h  main.cpp
Mar17/operator_overloading/: Rectangle.cpp  Rectangle.h  main.cpp
Mar24/: Shapes.h  TOPICS.md  main.cpp  quizTest.cpp
Mar31/: Rational.cpp  Rational.h  Shapes.cpp  TOPICS.md  dynamic-struct.cpp  make_diagonals.cpp  midterm_struct.cpp
May12/: OBJECTIVES.md  inheritance.cpp  main.cpp
May13/: polymorphism.cpp  templates.cpp  vector.cpp
May18/: main.cpp  trycatch.cpp
May4/: Mammal.cpp  Mammal.h  main.cpp
May5/: main.cpp
