cmake_minimum_required(VERSION 3.24)
project(supplemental_instruction)

set(CMAKE_CXX_STANDARD 17)

add_executable(supplemental_instruction Mar10/main.cpp Mar17/operator_overloading/Rectangle.h Mar17/operator_overloading/Rectangle.cpp Mar17/copy_constructor/Student.h Mar17/copy_constructor/Student.cpp Mar17/copy_constructor/main.cpp)
